kube/deploy/apps/soft-serve/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app soft-serve
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    - fromEntities:
        - "world"
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
        - ports:
            - port: "23231"
              protocol: TCP
        - ports:
            - port: "9418"
              protocol: TCP
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
